--- a/logowanie.html
+++ b/logowanie.html
@@ -19,7 +19,7 @@
     <!--navbar-->
 
     <nav class="nav nav-pills flex-column flex-sm-row bg-dark" style="color: white; height: 100px; margin-bottom: 174px">
-      <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="STRONA GOTOWA DO OCENY.html" style="font-size: 30px; padding-top: 25px; color: white !important;"><i class="bi bi-house-fill"></i> Strona główna</a>
+      <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="index.html" style="font-size: 30px; padding-top: 25px; color: white !important;"><i class="bi bi-house-fill"></i> Strona główna</a>
       <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="kategoria.html" style="font-size: 30px; padding-top: 25px; color: white !important;"><i class="bi bi-bag-fill"></i> Produkty</a>
       <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="onas.html" style="font-size: 30px; padding-top: 25px; color: white !important;"> <i class="bi bi-file-person-fill"></i> O nas</a>
       <a class="flex-sm-fill text-sm-center nav-link " aria-current="page" href="logowanie.html" style="font-size: 30px; padding-top: 25px; color: white !important;"> <i class="bi bi-door-open-fill"></i> Logowanie</a>
