--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
      <div class="pomocy">
         <img id="o1" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="slider.png" />
-        <img id="o2" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="slider.png"/>
-        <img id="o3" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="slider.png"/>
-        <img id="o4" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="slider.png"/>
+        <img id="o2" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="obrazek1.jpg"/>
+        <img id="o3" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="obrazek2.jpg"/>
+        <img id="o4" onmouseover="StopSlider()" onmouseout="StartSlider()" class="slides" src="obrazek3.jpg"/>
     </div>
 
     <!--navbar-->
